syntax = "proto3";

package io.opencola.util.protobuf;

message UUID {
  // 128-bit UUID represented as two 64-bit integers (high and low parts)
  fixed64 mostSignificantBits = 1;
  fixed64 leastSignificantBits = 2;
}

enum CompressionFormat {
  NONE = 0;
  DEFLATE = 1;
}

message CompressedBytes {
  CompressionFormat format = 1;
  bytes bytes = 2;
}

